<resources>
    <string name="app_name">CustomAppViewApp</string>
    <string name="action">Action</string>
    <string name="action_chip">Action Chip</string>
    <string name="best_offer">Best Offer</string>
    <string name="call_to_friend">Call to Friend</string>
    <string name="choice">Choice</string>
    <string name="choice_chip">Choice Chip</string>
    <string name="enter_name">Enter Name</string>
    <string name="entry_chip">Entry Chip</string>
    <string name="enter_message">Enter Message</string>
    <string name="entry">Entry</string>
    <string name="extra_soft">Extra Soft</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="fast_selling">Fast Selling</string>
    <string name="filter_chip">Filter Chip</string>
    <string name="food_list">Food List</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="message">Message</string>
    <string name="pickup">Pickup</string>
    <string name="play_music">Play Music</string>
    <string name="soft">Soft</string>
    <string name="send_message">Send Message</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="to">To:</string>
</resources>