<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.CustomViewApp.ConstraintLayout.Fragment" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" >

        <com.google.android.material.chip.Chip
            android:id="@+id/soft_chip"
            android:text="@string/soft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/extra_soft_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_soft"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/medium_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hard_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>