<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.CustomViewApp.ConstraintLayout.Fragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/to_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:imeOptions="actionGo"
        android:inputType="textNoSuggestions|text"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/to_label"
        app:layout_constraintStart_toEndOf="@id/to_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/to_label"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/to_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message"
        android:maxLines="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>