<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.CustomViewApp.ConstraintLayout.Fragment" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:singleLine="true"
            app:singleSelection="true"
            app:chipSpacingHorizontal="10dp"
            style="@style/Widget.Material3.Chip.Assist.Elevated" >

            <com.google.android.material.chip.Chip
                android:id="@+id/alarm_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_alarm"
                app:chipIcon="@drawable/ic_alarm"
                style="@style/Widget.Material3.Chip.Assist.Elevated" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:id="@+id/music_chip"
                android:layout_height="wrap_content"
                android:text="@string/play_music"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                app:chipIcon="@drawable/ic_music" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:id="@+id/call_chip"
                android:layout_height="wrap_content"
                android:text="@string/call_to_friend"
                app:chipIcon="@drawable/ic_call"
                style="@style/Widget.Material3.Chip.Assist.Elevated" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:id="@+id/message_chip"
                android:layout_height="wrap_content"
                android:text="@string/send_message"
                app:chipIcon="@drawable/ic_message"
                style="@style/Widget.Material3.Chip.Assist.Elevated" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>