<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.CustomViewApp.ConstraintLayout.Fragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.chip.Chip
            android:id="@+id/fast_delivery_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_delivery"
            style="@style/Widget.Material3.Chip.Filter.Elevated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/pickup_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            style="@style/Widget.Material3.Chip.Filter.Elevated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/best_offer_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_offer"
            style="@style/Widget.Material3.Chip.Filter.Elevated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fast_selling_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_selling"
            style="@style/Widget.Material3.Chip.Filter.Elevated" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_list_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_list"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:itemCount="13"
        tools:listitem="@layout/cell_filter"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/title_list_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>