<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.CustomViewApp.ConstraintLayout.Fragment" >
    <!--region Guide lines-->
    <!--region Vertical Guide lines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/constraint_guideline_vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"/>
    <!--endregion-->
    <!--region Horizontal Guidlines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/constraint_guideline_horizontal_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>
    <!--endregion-->
    <!--endregion-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/entry_chip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_chip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filter_chip_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_chip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_chip"
        app:layout_constraintTop_toBottomOf="@id/entry_chip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/choice_chip_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice_chip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_chip"
        app:layout_constraintTop_toBottomOf="@id/filter_chip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/action_chip_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_chip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_chip"
        app:layout_constraintTop_toBottomOf="@id/choice_chip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>